outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-21-05/evaluations/problem_eval-5198514043534193488_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    default but gives the destination node a higher priority if it is unvisited and within a dynamically calculated threshold (min_distance multiplied by a factor that increases as the number of remaining unvisited nodes decreases). This ensures the destination is favored earlier in the journey when fewer nodes remain.}
                                                                                                                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    default but gives the destination node a higher priority if it is unvisited and within a dynamically calculated threshold (min_distance multiplied by a factor that increases as the number of remaining unvisited nodes decreases). This ensures the destination is favored earlier in the journey when fewer nodes remain.}
                                                                                                                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'
